--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -8,24 +8,16 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dip"
-        android:layout_weight="1"
-        >
+        android:layout_weight="1" >
 
-        <ImageView
-            android:id="@+id/iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:src="@drawable/mobile" />
         <TextView
-            android:layout_toRightOf="@+id/iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="超级微信"
-            android:textColor="@android:color/black"
-            android:layout_centerHorizontal="true"
             android:layout_centerInParent="true"
-            />
+            android:gravity="center"
+            android:text="超级微信"
+            android:textColor="#000"
+            android:drawableLeft="@drawable/mobile"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -56,7 +48,7 @@
                 android:layout_height="match_parent"
                 android:layout_centerVertical="true"
                 android:background="@null"
-                android:hint="用户名"
+                android:hint="@string/user_name"
                 android:paddingLeft="10dip"
                 android:singleLine="true"
                 android:textColor="#000"
@@ -88,7 +80,7 @@
                 android:layout_height="match_parent"
                 android:layout_centerVertical="true"
                 android:background="@null"
-                android:hint="密码"
+                android:hint="@string/password"
                 android:inputType="textPassword"
                 android:paddingLeft="10dip"
                 android:singleLine="true"
@@ -105,6 +97,7 @@
             android:orientation="horizontal" >
 
             <Button
+                android:id="@+id/btn_register"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
@@ -115,11 +108,12 @@
                 android:onClick="register"
                 android:paddingBottom="7dp"
                 android:paddingTop="7dp"
-                android:text="注册"
+                android:text="@string/register"
                 android:textColor="@android:color/black"
                 android:textSize="18sp" />
 
             <Button
+                android:id="@+id/btn_login"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"
@@ -130,18 +124,17 @@
                 android:onClick="login"
                 android:paddingBottom="7dp"
                 android:paddingTop="7dp"
-                android:text="登录"
+                android:text="@string/login"
                 android:textColor="@android:color/white"
                 android:textSize="18sp" />
         </LinearLayout>
+    </RelativeLayout>
+
         <TextView
+            android:id="@+id/tvServerIp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:text="设置服务端的IP地址"
-            android:layout_centerHorizontal="true"
-            android:textColor="@android:color/black"
-            android:layout_marginBottom="10dp"/>
-    </RelativeLayout>
+            android:layout_gravity="center"
+            android:text="设置服务器IP地址"/>
 
 </LinearLayout>
