--- a/res/layout/row_sent_file.xml
+++ b/res/layout/row_sent_file.xml
@@ -37,7 +37,7 @@
             android:layout_toRightOf="@+id/ll_loading"
             android:background="@drawable/chatto_bg" >
 
-            <ImageView
+            <com.android.volley.toolbox.NetworkImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
